# manip_ws

./: .gitignore  README.md  StartupScript2.sh  frames_2025-07-24_18.43.16.gv  package.xml  setup.cfg  setup.py  your_robot.urdf
archive/: CMakeLists.txt
cert/: client.csr  client_cert.der  client_cert.pem  client_key.pem
config/: arm_joints.yaml  controllers.yaml  gz_bridge.yaml  joystick.yaml  mapper_params_online_async.yaml  rviz_config.rviz
description/: launch_relay.launch.py  robot.urdf.xacro  ros2_control.xacro  youbot_all.xacro  youbot_base.xacro  youbot_manip.xacro
description/not_used/: gazebo_control.xacro  lidar.xacro  youbot.srdf.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/manip/lib/manip/: blinker_node  heart_beat_node  lcddisplay  vmeter
install/manip/share/manip/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/manip/share/manip/config/: arm_joints.yaml  controllers.yaml  gaz_ros2_ctl_use_sim.yaml  gz_bridge.yaml  joystick.yaml  mapper_params_online_async.yaml  rviz_config.rviz
install/manip/share/manip/description/: robot.urdf.xacro  ros2_control.xacro  youbot_all.xacro  youbot_manip.xacro
install/manip/share/manip/launch/: joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py  rviz.launch.py
install/manip/share/manip/src/: __init__.py
install/manip/share/manip/views/: rviz_config.rviz  rviz_config2.rviz  rviz_config_manip.rviz
install/manip/share/manip/worlds/: empty.sdf  empty.world  obstacles.world  obstacles2.sdf
install/youbot/lib/youbot/: astolfi  log_node  opcua_client_node  relay_control_node  ro_bridge  simreal_selector  statemachine
install/youbot/share/youbot/: package.bash  package.sh  package.xml
launch/: joystick.launch.py  launch_lidar.launch.py  launch_robot.launch.py  launch_sim.launch.py  launch_youbot.launch.py  rsp.launch.py  rviz.launch.py  teleop_keyboard.launch.py  test.launch.py  ui.launch.py
log/: latest_build
meshes/youbot_arm/: arm0.dae  arm1.dae  arm2.dae  arm3.dae  arm4.dae  arm5.dae
src/: AstolfiController.py  HeartBeater.py  I2C_LCD_Driver.py  LCDDisplay.py  MessageLogger.py  OpcUaClient.py  ROBridge.py  RelayControl.py  SimRealSelector.py  StateController.py  VoltageSensor.py  blinker.py  lcdtest.py  voltage.py
srv/: PoseInput.srv
views/: rviz_config.rviz  rviz_config2.rviz  rviz_config_manip.rviz
worlds/: empty.sdf  empty.world  obstacles2.sdf
yb_manip/: package.xml  setup.cfg  setup.py
(+70 files in other folders)
